--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -1,54 +1,54 @@
 object Form1: TForm1
-  Left = 155
-  Height = 245
-  Top = 193
-  Width = 867
+  Left = 122
+  Top = 116
   HelpType = htKeyword
   BorderStyle = bsNone
-  Caption = 'Form1'
-  ClientHeight = 226
+  ClientHeight = 245
   ClientWidth = 867
+  Color = clBtnFace
+  Font.Charset = DEFAULT_CHARSET
+  Font.Color = clWindowText
   Font.Height = -11
   Font.Name = 'MS Sans Serif'
+  Font.Style = []
   KeyPreview = True
   Menu = MainMenu1
+  Position = poScreenCenter
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
   OnKeyUp = FormKeyUp
   OnMouseWheel = FormMouseWheel
   OnResize = FormResize
-  Position = poScreenCenter
-  LCLVersion = '0.9.28.2'
+  PixelsPerInch = 96
   object Panel5: TPanel
     Left = 0
-    Height = 206
     Top = 0
     Width = 867
-    Anchors = [akTop, akLeft, akRight, akBottom]
+    Height = 225
+    Anchors = [akLeft, akTop, akRight, akBottom]
     BevelOuter = bvNone
     Color = clMaroon
-    ParentColor = False
-    TabOrder = 0
     UseDockManager = False
+    TabOrder = 0
     OnMouseDown = Panel1MouseDown
     OnMouseMove = Panel1MouseMove
     OnMouseUp = Panel1MouseUp
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Height = 20
-    Top = 206
+    Top = 225
     Width = 867
-    Panels = <    
+    Height = 20
+    Panels = <
       item
         Text = 'Map size: -'
         Width = 110
-      end    
+      end
       item
         Text = 'Cursor: 46.1 47.2'
         Width = 180
-      end    
+      end
       item
         Text = '50.0 fps (50)'
         Width = 80
@@ -56,97 +56,83 @@ object Form1: TForm1
     SimplePanel = False
   end
   object GroupBox1: TGroupBox
-    Left = 432
-    Height = 80
+    Left = 408
     Top = 8
     Width = 425
-    Caption = '  Additional controls   ..   Press F11 to swap controls visibility'
-    ClientHeight = 62
-    ClientWidth = 421
+    Height = 73
+    Caption = 
+      '  Additional controls   ..   Press F11 to swap controls visibili' +
+      'ty'
     TabOrder = 2
     object TeamColorPicker: TShape
       Left = 144
-      Height = 22
-      Top = 32
+      Top = 40
       Width = 22
+      Height = 22
       OnDragDrop = TeamColorPickerDragDrop
       OnMouseUp = TeamColorPickerMouseUp
     end
     object Label2: TLabel
-      Left = 86
-      Height = 14
-      Top = 8
-      Width = 50
+      Left = 85
+      Top = 15
+      Width = 49
+      Height = 13
       Caption = 'Passability'
-      ParentColor = False
     end
     object Label3: TLabel
-      Left = 102
-      Height = 14
-      Top = 24
-      Width = 7
+      Left = 101
+      Top = 35
+      Width = 6
+      Height = 13
       Caption = '0'
-      ParentColor = False
     end
     object Label1: TLabel
       Left = 169
-      Height = 14
-      Top = 39
-      Width = 62
+      Top = 47
+      Width = 61
+      Height = 13
       Caption = 'Player1 color'
-      ParentColor = False
     end
     object Button_W: TButton
       Left = 144
-      Height = 17
-      Top = 8
+      Top = 16
       Width = 25
+      Height = 17
       Caption = 'W'
-      OnClick = Button_WClick
       TabOrder = 3
+      OnClick = Button_WClick
     end
     object CheckBox2: TCheckBox
       Left = 8
+      Top = 52
+      Width = 73
       Height = 17
-      Top = 40
-      Width = 71
       Caption = 'Speed x50'
-      OnClick = CheckBox2Click
       TabOrder = 1
+      OnClick = CheckBox2Click
     end
     object Debug_PassabilityTrack: TTrackBar
       Left = 2
-      Height = 17
-      Top = 8
+      Top = 14
       Width = 83
+      Height = 17
       Max = 9
-      OnChange = Debug_PassabilityTrackChange
+      Orientation = trHorizontal
       PageSize = 1
+      Frequency = 1
       Position = 0
+      TabOrder = 0
       TickMarks = tmBoth
       TickStyle = tsNone
-      TabOrder = 0
+      OnChange = Debug_PassabilityTrackChange
     end
     object RGPlayer: TRadioGroup
       Left = 304
-      Height = 61
-      Top = 0
+      Top = 8
       Width = 105
-      AutoFill = True
+      Height = 61
       Caption = ' Player '
-      ChildSizing.LeftRightSpacing = 6
-      ChildSizing.TopBottomSpacing = 6
-      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-      ChildSizing.EnlargeVertical = crsHomogenousChildResize
-      ChildSizing.ShrinkHorizontal = crsScaleChilds
-      ChildSizing.ShrinkVertical = crsScaleChilds
-      ChildSizing.Layout = cclLeftToRightThenTopToBottom
-      ChildSizing.ControlsPerLine = 3
-      ClientHeight = 43
-      ClientWidth = 101
       Columns = 3
-      Font.Height = -12
-      Font.Name = 'MS Sans Serif'
       ItemIndex = 0
       Items.Strings = (
         '1'
@@ -156,71 +142,80 @@ object Form1: TForm1
         '5'
         '6'
         '7'
-        '8'
-      )
-      OnClick = RGPlayerClick
-      ParentFont = False
+        '8')
       TabOrder = 2
+      OnClick = RGPlayerClick
     end
     object Button_V: TButton
       Left = 168
-      Height = 17
-      Top = 8
+      Top = 16
       Width = 25
+      Height = 17
       Caption = 'V'
-      OnClick = Button_VClick
       TabOrder = 4
+      OnClick = Button_VClick
     end
     object Button_6: TButton
       Left = 192
-      Height = 17
-      Top = 8
+      Top = 16
       Width = 25
+      Height = 17
       Caption = '6'
-      OnClick = Button_6Click
       TabOrder = 5
+      OnClick = Button_6Click
     end
     object Button_1: TButton
       Left = 216
-      Height = 17
-      Top = 8
+      Top = 16
       Width = 25
+      Height = 17
       Caption = '1'
-      OnClick = Button_1Click
       TabOrder = 6
+      OnClick = Button_1Click
     end
     object Button_Stop: TButton
       Left = 240
-      Height = 17
-      Top = 8
+      Top = 16
       Width = 25
+      Height = 17
       Caption = 'Stop'
-      OnClick = Button_StopClick
       TabOrder = 7
+      OnClick = Button_StopClick
     end
     object TB_Angle: TTrackBar
       Left = 2
-      Height = 17
-      Top = 24
+      Top = 32
       Width = 95
+      Height = 17
       Max = 90
-      OnChange = TB_Angle_Change
+      Orientation = trHorizontal
       PageSize = 1
+      Frequency = 1
       Position = 0
+      TabOrder = 8
       TickMarks = tmBoth
       TickStyle = tsNone
-      TabOrder = 8
+      OnChange = TB_Angle_Change
+    end
+    object Button1: TButton
+      Left = 240
+      Top = 40
+      Width = 75
+      Height = 25
+      Caption = 'Button1'
+      TabOrder = 9
+      OnClick = Button1Click
     end
   end
   object OpenDialog1: TOpenDialog
     InitialDir = '.'
     Options = [ofHideReadOnly, ofFileMustExist, ofEnableSizing]
-    left = 40
-    top = 176
+    Left = 48
+    Top = 192
   end
   object MainMenu1: TMainMenu
-    left = 8
-    top = 176
+    Left = 16
+    Top = 192
     object File1: TMenuItem
       Caption = 'File'
       object OpenMissionMenu: TMenuItem
@@ -332,7 +327,7 @@ object Form1: TForm1
   object Timer100ms: TTimer
     Interval = 100
     OnTimer = Timer100msTimer
-    left = 72
-    top = 176
+    Left = 80
+    Top = 192
   end
 end
