--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -1,54 +1,54 @@
 object Form1: TForm1
   Left = 122
+  Height = 245
   Top = 116
+  Width = 867
   HelpType = htKeyword
   BorderStyle = bsNone
-  ClientHeight = 245
+  Caption = 'Form1'
+  ClientHeight = 226
   ClientWidth = 867
-  Color = clBtnFace
-  Font.Charset = DEFAULT_CHARSET
-  Font.Color = clWindowText
   Font.Height = -11
   Font.Name = 'MS Sans Serif'
-  Font.Style = []
   KeyPreview = True
   Menu = MainMenu1
-  Position = poScreenCenter
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnKeyDown = FormKeyDown
   OnKeyUp = FormKeyUp
   OnMouseWheel = FormMouseWheel
   OnResize = FormResize
-  PixelsPerInch = 96
+  Position = poScreenCenter
+  LCLVersion = '0.9.28.2'
   object Panel5: TPanel
     Left = 0
+    Height = 206
     Top = 0
     Width = 867
-    Height = 225
-    Anchors = [akLeft, akTop, akRight, akBottom]
+    Anchors = [akTop, akLeft, akRight, akBottom]
     BevelOuter = bvNone
     Color = clMaroon
-    UseDockManager = False
+    ParentColor = False
     TabOrder = 0
+    UseDockManager = False
     OnMouseDown = Panel1MouseDown
     OnMouseMove = Panel1MouseMove
     OnMouseUp = Panel1MouseUp
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Top = 225
-    Width = 867
     Height = 20
-    Panels = <
+    Top = 206
+    Width = 867
+    Panels = <    
       item
         Text = 'Map size: -'
         Width = 110
-      end
+      end    
       item
         Text = 'Cursor: 46.1 47.2'
         Width = 180
-      end
+      end    
       item
         Text = '50.0 fps (50)'
         Width = 80
@@ -57,81 +57,93 @@ object Form1: TForm1
   end
   object GroupBox1: TGroupBox
     Left = 408
+    Height = 73
     Top = 8
     Width = 425
-    Height = 73
-    Caption = 
-      '  Additional controls   ..   Press F11 to swap controls visibili' +
-      'ty'
+    Caption = '  Additional controls   ..   Press F11 to swap controls visibility'
+    ClientHeight = 55
+    ClientWidth = 421
     TabOrder = 2
     object TeamColorPicker: TShape
       Left = 144
+      Height = 22
       Top = 40
       Width = 22
-      Height = 22
       OnDragDrop = TeamColorPickerDragDrop
       OnMouseUp = TeamColorPickerMouseUp
     end
     object Label2: TLabel
       Left = 85
+      Height = 14
       Top = 15
-      Width = 49
-      Height = 13
+      Width = 50
       Caption = 'Passability'
+      ParentColor = False
     end
     object Label3: TLabel
       Left = 101
+      Height = 14
       Top = 35
-      Width = 6
-      Height = 13
+      Width = 7
       Caption = '0'
+      ParentColor = False
     end
     object Label1: TLabel
       Left = 169
+      Height = 14
       Top = 47
-      Width = 61
-      Height = 13
+      Width = 62
       Caption = 'Player1 color'
+      ParentColor = False
     end
     object Button_W: TButton
       Left = 144
+      Height = 17
       Top = 16
       Width = 25
-      Height = 17
       Caption = 'W'
-      TabOrder = 3
       OnClick = Button_WClick
+      TabOrder = 3
     end
     object CheckBox2: TCheckBox
       Left = 8
-      Top = 52
-      Width = 73
       Height = 17
+      Top = 52
+      Width = 71
       Caption = 'Speed x50'
-      TabOrder = 1
       OnClick = CheckBox2Click
+      TabOrder = 1
     end
     object Debug_PassabilityTrack: TTrackBar
       Left = 2
+      Height = 17
       Top = 14
       Width = 83
-      Height = 17
       Max = 9
-      Orientation = trHorizontal
+      OnChange = Debug_PassabilityTrackChange
       PageSize = 1
-      Frequency = 1
       Position = 0
-      TabOrder = 0
       TickMarks = tmBoth
       TickStyle = tsNone
-      OnChange = Debug_PassabilityTrackChange
+      TabOrder = 0
     end
     object RGPlayer: TRadioGroup
       Left = 304
+      Height = 61
       Top = 8
       Width = 105
-      Height = 61
+      AutoFill = True
       Caption = ' Player '
+      ChildSizing.LeftRightSpacing = 6
+      ChildSizing.TopBottomSpacing = 6
+      ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+      ChildSizing.EnlargeVertical = crsHomogenousChildResize
+      ChildSizing.ShrinkHorizontal = crsScaleChilds
+      ChildSizing.ShrinkVertical = crsScaleChilds
+      ChildSizing.Layout = cclLeftToRightThenTopToBottom
+      ChildSizing.ControlsPerLine = 3
+      ClientHeight = 43
+      ClientWidth = 101
       Columns = 3
       ItemIndex = 0
       Items.Strings = (
@@ -142,80 +154,79 @@ object Form1: TForm1
         '5'
         '6'
         '7'
-        '8')
-      TabOrder = 2
+        '8'
+      )
       OnClick = RGPlayerClick
+      TabOrder = 2
     end
     object Button_V: TButton
       Left = 168
+      Height = 17
       Top = 16
       Width = 25
-      Height = 17
       Caption = 'V'
-      TabOrder = 4
       OnClick = Button_VClick
+      TabOrder = 4
     end
     object Button_6: TButton
       Left = 192
+      Height = 17
       Top = 16
       Width = 25
-      Height = 17
       Caption = '6'
-      TabOrder = 5
       OnClick = Button_6Click
+      TabOrder = 5
     end
     object Button_1: TButton
       Left = 216
+      Height = 17
       Top = 16
       Width = 25
-      Height = 17
       Caption = '1'
-      TabOrder = 6
       OnClick = Button_1Click
+      TabOrder = 6
     end
     object Button_Stop: TButton
       Left = 240
+      Height = 17
       Top = 16
       Width = 25
-      Height = 17
       Caption = 'Stop'
-      TabOrder = 7
       OnClick = Button_StopClick
+      TabOrder = 7
     end
     object TB_Angle: TTrackBar
       Left = 2
+      Height = 17
       Top = 32
       Width = 95
-      Height = 17
       Max = 90
-      Orientation = trHorizontal
+      OnChange = TB_Angle_Change
       PageSize = 1
-      Frequency = 1
       Position = 0
-      TabOrder = 8
       TickMarks = tmBoth
       TickStyle = tsNone
-      OnChange = TB_Angle_Change
+      TabOrder = 8
     end
     object Button1: TButton
       Left = 240
+      Height = 25
       Top = 40
       Width = 75
-      Height = 25
       Caption = 'Button1'
-      TabOrder = 9
       OnClick = Button1Click
+      TabOrder = 9
     end
   end
   object OpenDialog1: TOpenDialog
     InitialDir = '.'
     Options = [ofHideReadOnly, ofFileMustExist, ofEnableSizing]
-    Left = 48
-    Top = 192
+    left = 48
+    top = 192
   end
   object MainMenu1: TMainMenu
-    Left = 16
-    Top = 192
+    left = 16
+    top = 192
     object File1: TMenuItem
       Caption = 'File'
       object OpenMissionMenu: TMenuItem
@@ -327,7 +338,7 @@ object Form1: TForm1
   object Timer100ms: TTimer
     Interval = 100
     OnTimer = Timer100msTimer
-    Left = 80
-    Top = 192
+    left = 80
+    top = 192
   end
 end
