--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -210,23 +210,24 @@ object Form1: TForm1
     end
     object Button1: TButton
       Left = 240
-      Height = 25
       Top = 40
       Width = 75
+      Height = 25
       Caption = 'Button1'
-      OnClick = Button1Click
       TabOrder = 9
+      OnClick = Button1Click
+    end
     end
   end
   object OpenDialog1: TOpenDialog
     InitialDir = '.'
     Options = [ofHideReadOnly, ofFileMustExist, ofEnableSizing]
-    left = 48
-    top = 192
+    Left = 48
+    Top = 192
   end
   object MainMenu1: TMainMenu
-    left = 16
-    top = 192
+    Left = 16
+    Top = 192
     object File1: TMenuItem
       Caption = 'File'
       object OpenMissionMenu: TMenuItem
@@ -342,7 +343,7 @@ object Form1: TForm1
   object Timer100ms: TTimer
     Interval = 100
     OnTimer = Timer100msTimer
-    left = 80
-    top = 192
+    Left = 80
+    Top = 192
   end
 end
