--- a/Utils/FontEditor/umain.lfm
+++ b/Utils/FontEditor/umain.lfm
@@ -1,26 +1,73 @@
 object frmMain: TfrmMain
-  Left = 297
-  Height = 637
-  Top = 140
-  Width = 689
+  Left = 428
+  Height = 680
+  Top = 135
+  Width = 825
   Caption = 'KaM Font Editor'
-  ClientHeight = 637
-  ClientWidth = 689
+  ClientHeight = 680
+  ClientWidth = 825
   Font.Height = -11
   Font.Name = 'MS Sans Serif'
   OnCreate = FormCreate
   LCLVersion = '0.9.28.2'
+  object Image1: TImage
+    Left = 160
+    Height = 512
+    Top = 16
+    Width = 512
+    OnMouseMove = Image1MouseMove
+  end
   object Label4: TLabel
     Left = 8
     Height = 14
-    Top = 400
+    Top = 432
     Width = 33
     Caption = 'Label4'
+    Color = clBtnFace
     ParentColor = False
+    Transparent = False
+  end
+  object Image3: TImage
+    Left = 680
+    Height = 512
+    Top = 16
+    Width = 128
+  end
+  object Image4: TImage
+    Left = 160
+    Height = 30
+    Top = 536
+    Width = 649
+  end
+  object Image5: TImage
+    Left = 160
+    Height = 60
+    Top = 565
+    Width = 649
+  end
+  object Label1: TLabel
+    Left = 8
+    Height = 14
+    Top = 448
+    Width = 33
+    Caption = 'Label4'
+    Color = clBtnFace
+    ParentColor = False
+    Transparent = False
+  end
+  object Label2: TLabel
+    Left = 8
+    Height = 14
+    Top = 464
+    Width = 33
+    Caption = 'Label4'
+    Color = clBtnFace
+    ParentColor = False
+    Transparent = False
   end
   object ListBox1: TListBox
     Left = 8
-    Height = 345
+    Height = 257
     Top = 40
     Width = 145
     ItemHeight = 0
@@ -32,203 +79,32 @@ object frmMain: TfrmMain
     Height = 21
     Top = 8
     Width = 97
-    Caption = 'Refresh'
+    Caption = 'Refresh list'
     OnClick = RefreshDataClick
     TabOrder = 2
   end
   object BitBtn1: TBitBtn
     Left = 8
     Height = 25
-    Top = 432
-    Width = 97
-    Anchors = [akLeft, akBottom]
+    Top = 564
+    Width = 145
     Caption = 'Save Font File'
     OnClick = BitBtn1Click
     TabOrder = 0
   end
-  object PageControl1: TPageControl
-    Left = 160
-    Height = 569
-    Top = 8
-    Width = 521
-    ActivePage = TabSheet1
-    TabIndex = 0
-    TabOrder = 3
-    OnPageChanged = PageControl1Change
-    object TabSheet1: TTabSheet
-      Caption = 'Preview'
-      ClientHeight = 543
-      ClientWidth = 513
-      object Image1: TImage
-        Left = 0
-        Height = 512
-        Top = 28
-        Width = 512
-        OnMouseMove = Image1MouseMove
-        OnMouseUp = Image1MouseUp
-      end
-      object btnExportBig: TBitBtn
-        Left = 120
-        Height = 25
-        Top = 1
-        Width = 120
-        Anchors = [akLeft, akBottom]
-        Caption = 'Export BMP'
-        OnClick = btnExportBigClick
-        TabOrder = 0
-      end
-      object CheckCells: TCheckBox
-        Left = 4
-        Height = 17
-        Top = 4
-        Width = 71
-        Caption = 'Show cells'
-        OnClick = CheckCellsClick
-        TabOrder = 1
-      end
-      object btnImportBig: TBitBtn
-        Left = 240
-        Height = 25
-        Top = 1
-        Width = 120
-        Anchors = [akLeft, akBottom]
-        Caption = 'Import BMP'
-        OnClick = btnImportBigClick
-        TabOrder = 2
-      end
-    end
-    object TabSheet2: TTabSheet
-      Caption = 'Letters'
-      ClientHeight = 543
-      ClientWidth = 513
-      ImageIndex = 1
-      object Image2: TImage
-        Left = 168
-        Height = 161
-        Top = 208
-        Width = 161
-      end
-      object Image3: TImage
-        Left = 1
-        Height = 128
-        Top = 56
-        Width = 512
-        OnMouseDown = Image3MouseDown
-        OnMouseMove = Image3MouseMove
-      end
-      object Label1: TLabel
-        Left = 16
-        Height = 14
-        Top = 40
-        Width = 62
-        Caption = 'Work palette'
-        Color = clBtnFace
-        ParentColor = False
-        Transparent = False
-      end
-      object Label2: TLabel
-        Left = 176
-        Height = 14
-        Top = 192
-        Width = 28
-        Caption = 'Letter'
-        Color = clBtnFace
-        ParentColor = False
-        Transparent = False
-      end
-      object Image4: TImage
-        Left = 8
-        Height = 40
-        Top = 386
-        Width = 489
-      end
-      object Image5: TImage
-        Left = 8
-        Height = 80
-        Top = 426
-        Width = 489
-      end
-      object imgColourSelected: TImage
-        Left = 4
-        Height = 48
-        Top = 208
-        Width = 48
-      end
-      object Label3: TLabel
-        Left = 12
-        Height = 14
-        Top = 192
-        Width = 28
-        Caption = 'Brush'
-        Color = clBtnFace
-        ParentColor = False
-        Transparent = False
-      end
-      object Shape1: TShape
-        Left = 0
-        Height = 18
-        Top = 56
-        Width = 18
-        Brush.Style = bsClear
-        Pen.Color = clLime
-        Pen.Width = 2
-      end
-      object Edit1: TEdit
-        Left = 8
-        Height = 21
-        Top = 352
-        Width = 121
-        OnChange = Edit1Change
-        TabOrder = 0
-        Text = 'Sample phrase'
-      end
-      object RadioGroup1: TRadioGroup
-        Left = 0
-        Height = 35
-        Top = 0
-        Width = 513
-        AutoFill = True
-        Caption = ' Palette  '
-        ChildSizing.LeftRightSpacing = 6
-        ChildSizing.TopBottomSpacing = 6
-        ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-        ChildSizing.EnlargeVertical = crsHomogenousChildResize
-        ChildSizing.ShrinkHorizontal = crsScaleChilds
-        ChildSizing.ShrinkVertical = crsScaleChilds
-        ChildSizing.Layout = cclLeftToRightThenTopToBottom
-        ChildSizing.ControlsPerLine = 9
-        ClientHeight = 17
-        ClientWidth = 509
-        Columns = 9
-        Items.Strings = (
-          'map'
-          'pal0'
-          'pal1'
-          'pal2'
-          'pal3'
-          'pal4'
-          'pal5'
-          'setup'
-          'setup2'
-        )
-        OnClick = RadioGroup1Click
-        TabOrder = 1
-      end
-    end
-  end
   object StatusBar1: TStatusBar
     Left = 0
     Height = 20
-    Top = 617
-    Width = 689
+    Top = 660
+    Width = 825
     Panels = <    
       item
         Text = 'Font'
-        Width = 200
+        Width = 240
       end    
       item
         Text = 'Coordinates'
-        Width = 100
+        Width = 120
       end    
       item
         Text = 'Font Hex Code'
@@ -236,12 +112,86 @@ object frmMain: TfrmMain
       end>
     SimplePanel = False
   end
+  object Edit1: TEdit
+    Left = 8
+    Height = 21
+    Top = 604
+    Width = 145
+    OnChange = Edit1Change
+    TabOrder = 4
+    Text = 'Sample phrase'
+  end
+  object CheckCells: TCheckBox
+    Left = 8
+    Height = 17
+    Top = 480
+    Width = 71
+    Caption = 'Show cells'
+    Checked = True
+    OnClick = CheckCellsClick
+    State = cbChecked
+    TabOrder = 6
+  end
+  object btnExportBig: TBitBtn
+    Left = 8
+    Height = 25
+    Top = 500
+    Width = 145
+    Caption = 'Export BMP'
+    OnClick = btnExportBigClick
+    TabOrder = 7
+  end
+  object btnImportBig: TBitBtn
+    Left = 8
+    Height = 25
+    Top = 524
+    Width = 145
+    Caption = 'Import BMP'
+    OnClick = btnImportBigClick
+    TabOrder = 5
+  end
+  object RGPalette: TRadioGroup
+    Left = 8
+    Height = 121
+    Top = 304
+    Width = 145
+    AutoFill = True
+    Caption = ' Preview palette  '
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 2
+    ClientHeight = 103
+    ClientWidth = 141
+    Columns = 2
+    Items.Strings = (
+      'map.bbm'
+      'pal0.bbm'
+      'pal1.bbm'
+      'pal2.bbm'
+      'pal3.bbm'
+      'pal4.bbm'
+      'pal5.bbm'
+      'setup.bbm'
+      'setup2.bbm'
+      'linear'
+      'mapgold.lbm'
+      'setup.lbm'
+      'pal1.lbm'
+    )
+    OnClick = RGPaletteClick
+    TabOrder = 8
+  end
   object OpenDialog1: TOpenDialog
-    left = 568
+    left = 88
     top = 8
   end
   object SaveDialog1: TSaveDialog
-    left = 632
+    left = 120
     top = 8
   end
 end
