--- a/KM_Unit1.lfm
+++ b/KM_Unit1.lfm
@@ -208,25 +208,16 @@ object Form1: TForm1
       TickStyle = tsNone
       TabOrder = 8
     end
-    object Button1: TButton
-      Left = 240
-      Top = 40
-      Width = 75
-      Height = 25
-      Caption = 'Button1'
-      TabOrder = 9
-      OnClick = Button1Click
-    end
   end
   object OpenDialog1: TOpenDialog
     InitialDir = '.'
     Options = [ofHideReadOnly, ofFileMustExist, ofEnableSizing]
-    Left = 48
-    Top = 192
+    left = 48
+    top = 192
   end
   object MainMenu1: TMainMenu
-    Left = 16
-    Top = 192
+    left = 16
+    top = 192
     object File1: TMenuItem
       Caption = 'File'
       object OpenMissionMenu: TMenuItem
@@ -342,7 +333,7 @@ object Form1: TForm1
   object Timer100ms: TTimer
     Interval = 100
     OnTimer = Timer100msTimer
-    Left = 80
-    Top = 192
+    left = 80
+    top = 192
   end
 end
