--- a/Utils/uniteditor/lib/i386-win32/unit1.lfm
+++ b/Utils/uniteditor/lib/i386-win32/unit1.lfm
@@ -33,13 +33,6 @@ object Form1: TForm1
     Caption = 'Unit Name'
     ParentColor = False
   end
-  object unit_name: TEdit
-    Left = 160
-    Height = 23
-    Top = 80
-    Width = 80
-    TabOrder = 2
-  end
   object UnitNumber: TLabel
     Left = 25
     Height = 16
@@ -53,7 +46,7 @@ object Form1: TForm1
     Height = 23
     Top = 48
     Width = 80
-    TabOrder = 3
+    TabOrder = 2
     Text = '1'
   end
   object Label1: TLabel
@@ -69,7 +62,7 @@ object Form1: TForm1
     Height = 23
     Top = 120
     Width = 80
-    TabOrder = 4
+    TabOrder = 3
   end
   object Label2: TLabel
     Left = 25
@@ -84,7 +77,7 @@ object Form1: TForm1
     Height = 23
     Top = 160
     Width = 80
-    TabOrder = 5
+    TabOrder = 4
   end
   object Label3: TLabel
     Left = 25
@@ -99,7 +92,7 @@ object Form1: TForm1
     Height = 23
     Top = 199
     Width = 80
-    TabOrder = 6
+    TabOrder = 5
   end
   object Label4: TLabel
     Left = 25
@@ -114,7 +107,7 @@ object Form1: TForm1
     Height = 23
     Top = 232
     Width = 80
-    TabOrder = 7
+    TabOrder = 6
   end
   object Defence: TLabel
     Left = 25
@@ -129,7 +122,7 @@ object Form1: TForm1
     Height = 23
     Top = 272
     Width = 80
-    TabOrder = 8
+    TabOrder = 7
   end
   object Speed: TLabel
     Left = 25
@@ -144,12 +137,12 @@ object Form1: TForm1
     Height = 23
     Top = 312
     Width = 79
-    TabOrder = 9
+    TabOrder = 8
   end
   object label5: TLabel
     Left = 288
     Height = 16
-    Top = 48
+    Top = 120
     Width = 12
     Caption = 'x7'
     ParentColor = False
@@ -157,14 +150,14 @@ object Form1: TForm1
   object x7: TEdit
     Left = 380
     Height = 23
-    Top = 48
-    Width = 84
-    TabOrder = 10
+    Top = 120
+    Width = 81
+    TabOrder = 9
   end
   object Label6: TLabel
     Left = 288
     Height = 16
-    Top = 87
+    Top = 160
     Width = 28
     Caption = 'Sight'
     ParentColor = False
@@ -172,14 +165,14 @@ object Form1: TForm1
   object Sight: TEdit
     Left = 380
     Height = 23
-    Top = 80
+    Top = 159
     Width = 81
-    TabOrder = 11
+    TabOrder = 10
   end
   object Label7: TLabel
     Left = 288
     Height = 16
-    Top = 121
+    Top = 199
     Width = 12
     Caption = 'x9'
     ParentColor = False
@@ -187,7 +180,7 @@ object Form1: TForm1
   object Label8: TLabel
     Left = 288
     Height = 16
-    Top = 160
+    Top = 232
     Width = 18
     Caption = 'x10'
     ParentColor = False
@@ -195,21 +188,21 @@ object Form1: TForm1
   object x9: TEdit
     Left = 380
     Height = 23
-    Top = 121
+    Top = 199
     Width = 81
-    TabOrder = 12
+    TabOrder = 11
   end
   object x10: TEdit
     Left = 380
     Height = 23
-    Top = 160
+    Top = 232
     Width = 81
-    TabOrder = 13
+    TabOrder = 12
   end
   object Label9: TLabel
     Left = 288
     Height = 16
-    Top = 199
+    Top = 272
     Width = 68
     Caption = 'CanWalkOut'
     ParentColor = False
@@ -217,14 +210,14 @@ object Form1: TForm1
   object CVA: TEdit
     Left = 380
     Height = 23
-    Top = 199
+    Top = 272
     Width = 81
-    TabOrder = 14
+    TabOrder = 13
   end
   object Label10: TLabel
-    Left = 294
+    Left = 288
     Height = 16
-    Top = 232
+    Top = 312
     Width = 18
     Caption = 'x11'
     ParentColor = False
@@ -232,8 +225,25 @@ object Form1: TForm1
   object x11: TEdit
     Left = 380
     Height = 23
-    Top = 232
+    Top = 312
     Width = 81
+    TabOrder = 14
+  end
+  object Label11: TLabel
+    Left = 161
+    Height = 16
+    Top = 82
+    Width = 31
+    Caption = 'name'
+    ParentColor = False
+  end
+  object Button1: TButton
+    Left = 192
+    Height = 23
+    Top = 8
+    Width = 83
+    Caption = 'Save'
+    OnClick = saveDAT
     TabOrder = 15
   end
 end
