--- a/Utils/uniteditor/unit1.lfm
+++ b/Utils/uniteditor/unit1.lfm
@@ -1,19 +1,17 @@
 object Form1: TForm1
-  Left = 527
+  Left = 367
   Height = 391
-  Top = 294
+  Top = 376
   Width = 608
-  ActiveControl = File_name
   Caption = 'Form1'
   ClientHeight = 391
   ClientWidth = 608
-  OnCreate = init
-  LCLVersion = '0.9.28.2'
+  LCLVersion = '0.9.30'
   object SName: TLabel
     Left = 25
     Height = 16
     Top = 80
-    Width = 66
+    Width = 58
     Caption = 'Unit Name'
     ParentColor = False
   end
@@ -21,7 +19,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 47
-    Width = 75
+    Width = 67
     Caption = 'UnitNumber'
     ParentColor = False
   end
@@ -29,7 +27,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 120
-    Width = 57
+    Width = 50
     Caption = 'Hitpoints'
     ParentColor = False
   end
@@ -37,7 +35,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 159
-    Width = 37
+    Width = 31
     Caption = 'Atack'
     ParentColor = False
   end
@@ -45,7 +43,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 199
-    Width = 118
+    Width = 99
     Caption = 'AttackHorseBonus'
     ParentColor = False
   end
@@ -53,7 +51,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 232
-    Width = 16
+    Width = 12
     Caption = 'x4'
     ParentColor = False
   end
@@ -61,7 +59,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 272
-    Width = 55
+    Width = 44
     Caption = 'Defence'
     ParentColor = False
   end
@@ -69,7 +67,7 @@ object Form1: TForm1
     Left = 25
     Height = 16
     Top = 312
-    Width = 41
+    Width = 33
     Caption = 'Speed'
     ParentColor = False
   end
@@ -77,7 +75,7 @@ object Form1: TForm1
     Left = 288
     Height = 16
     Top = 120
-    Width = 16
+    Width = 12
     Caption = 'x7'
     ParentColor = False
   end
@@ -85,7 +83,7 @@ object Form1: TForm1
     Left = 288
     Height = 16
     Top = 160
-    Width = 33
+    Width = 28
     Caption = 'Sight'
     ParentColor = False
   end
@@ -93,7 +91,7 @@ object Form1: TForm1
     Left = 288
     Height = 16
     Top = 199
-    Width = 16
+    Width = 12
     Caption = 'x9'
     ParentColor = False
   end
@@ -101,7 +99,7 @@ object Form1: TForm1
     Left = 288
     Height = 16
     Top = 232
-    Width = 24
+    Width = 18
     Caption = 'x10'
     ParentColor = False
   end
@@ -109,7 +107,7 @@ object Form1: TForm1
     Left = 288
     Height = 16
     Top = 272
-    Width = 79
+    Width = 68
     Caption = 'CanWalkOut'
     ParentColor = False
   end
@@ -117,7 +115,7 @@ object Form1: TForm1
     Left = 288
     Height = 16
     Top = 312
-    Width = 24
+    Width = 18
     Caption = 'x11'
     ParentColor = False
   end
@@ -125,17 +123,9 @@ object Form1: TForm1
     Left = 161
     Height = 16
     Top = 82
-    Width = 36
+    Width = 31
     Caption = 'name'
     ParentColor = False
-  end
-  object File_name: TEdit
-    Left = 16
-    Height = 21
-    Top = 8
-    Width = 80
-    TabOrder = 0
-    Text = 'File_name'
   end
   object Open: TButton
     Left = 104
@@ -144,100 +134,100 @@ object Form1: TForm1
     Width = 75
     Caption = 'Open'
     OnClick = open_file
-    TabOrder = 1
+    TabOrder = 0
   end
   object number: TEdit
     Left = 160
-    Height = 21
+    Height = 23
     Top = 48
     Width = 80
     OnChange = showDAT
-    TabOrder = 2
+    TabOrder = 1
     Text = '1'
   end
   object HP: TEdit
     Left = 160
-    Height = 21
+    Height = 23
     Top = 120
     Width = 80
-    TabOrder = 3
+    TabOrder = 2
   end
   object ATK: TEdit
     Left = 160
-    Height = 21
+    Height = 23
     Top = 160
     Width = 80
-    TabOrder = 4
+    TabOrder = 3
   end
   object AHB: TEdit
     Left = 160
-    Height = 21
+    Height = 23
     Top = 199
     Width = 80
-    TabOrder = 5
+    TabOrder = 4
   end
   object x4: TEdit
     Left = 160
-    Height = 21
+    Height = 23
     Top = 232
     Width = 80
-    TabOrder = 6
+    TabOrder = 5
   end
   object DEF: TEdit
     Left = 160
-    Height = 21
+    Height = 23
     Top = 272
     Width = 80
-    TabOrder = 7
+    TabOrder = 6
   end
   object SPD: TEdit
     Left = 161
-    Height = 21
+    Height = 23
     Top = 312
     Width = 79
-    TabOrder = 8
+    TabOrder = 7
   end
   object x7: TEdit
     Left = 380
-    Height = 21
+    Height = 23
     Top = 120
     Width = 81
-    TabOrder = 9
+    TabOrder = 8
   end
   object Sight: TEdit
     Left = 380
-    Height = 21
+    Height = 23
     Top = 159
     Width = 81
-    TabOrder = 10
+    TabOrder = 9
   end
   object x9: TEdit
     Left = 380
-    Height = 21
+    Height = 23
     Top = 199
     Width = 81
-    TabOrder = 11
+    TabOrder = 10
   end
   object x10: TEdit
     Left = 380
-    Height = 21
+    Height = 23
     Top = 232
     Width = 81
-    TabOrder = 12
+    TabOrder = 11
   end
   object CVA: TEdit
     Left = 380
-    Height = 21
+    Height = 23
     Top = 272
     Width = 81
-    TabOrder = 13
+    TabOrder = 12
   end
   object x11: TEdit
     Left = 380
-    Height = 21
+    Height = 23
     Top = 312
     Width = 81
-    TabOrder = 14
+    TabOrder = 13
   end
   object Button1: TButton
     Left = 192
@@ -246,6 +236,16 @@ object Form1: TForm1
     Width = 83
     Caption = 'Save'
     OnClick = saveDAT
-    TabOrder = 15
+    TabOrder = 14
+  end
+  object SaveDialog1: TSaveDialog
+    DefaultExt = '.dat'
+    left = 288
+    top = 8
+  end
+  object OpenDialog1: TOpenDialog
+    DefaultExt = '../../Data/Defines/Unit.dat'
+    left = 345
+    top = 8
   end
 end
